crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__query_dataset__empty_dataset_data.snap
---
source: crates/store/dl_redap_tests/src/tests/query_dataset.rs
expression: filtered_chunk_info.format_snapshot(false)
---
┌──────────┬──────────────────┬─────────────────────┬───────────────────┬─────────────────┬────────────────────────┬───────────────────────────────────┐
│ chunk_id ┆ chunk_segment_id ┆ dalaran_segment_layer ┆ chunk_entity_path ┆ chunk_is_static ┆ dalaran_layer_direct_url ┆ dalaran_layer_direct_url_expires_at │
╞══════════╪══════════════════╪═════════════════════╪═══════════════════╪═════════════════╪════════════════════════╪═══════════════════════════════════╡
└──────────┴──────────────────┴─────────────────────┴───────────────────┴─────────────────┴────────────────────────┴───────────────────────────────────┘
